fix content overflow

--- a/src/main/resources/ui/style.css
+++ b/src/main/resources/ui/style.css
@@ -108,6 +108,7 @@ file-icon {
     flex-direction: column;
     align-items: center; */
     margin-top: 56px;
+    margin-bottom: 58px;
 }
 
 #content locale {
@@ -829,11 +830,11 @@ dialog.fade-out::backdrop {
     }
 
     #settings-dialog[open] {
-        animation: activityFadeIn 400ms ease-in-out 0s;
+        animation: activityFadeIn 350ms ease-in-out 0s;
     }
 
     #settings-dialog.fade-out {
-        animation: activityFadeOut 350ms ease-in-out 0s;
+        animation: activityFadeOut 300ms ease-in-out 0s;
     }
 
     #settings-dialog .title {
